kustomize/linkding/service.yaml
# filepath: /home/dave/src/k3s-config/kustomize/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: linkding
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Service for Linkding bookmark manager."
spec:
  selector:
    app: linkding
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
